tests/baselines/reference/typeGuardOfFormFunctionEquality.errors.txt
typeGuardOfFormFunctionEquality.ts(12,10): error TS99999: Annotated function was also inferred to be a type guard


==== typeGuardOfFormFunctionEquality.ts (1 errors) ====
    declare function isString1(a: number, b: Object): b is string;
    
    declare function isString2(a: Object): a is string;
    
    switch (isString1(0, "")) {
        case isString2(""):
        default:
    }
    
    var x = isString1(0, "") === isString2("");
    
    function isString3(a: number, b: number, c: Object): c is string {
             ~~~~~~~~~
!!! error TS99999: Annotated function was also inferred to be a type guard
        return isString1(0, c);
    }
    